# src/docs/swagger.yaml
@@ -1,4 +1,26 @@
-basePath: /api/shop/v1
+basePath: /api/v1
+definitions:
+  request.Pagination:
+    properties:
+      endDate:
+        type: string
+      id:
+        type: integer
+      limit:
+        type: integer
+      offset:
+        type: integer
+      pageNum:
+        type: integer
+      pageSize:
+        type: integer
+      sortName:
+        type: string
+      sortOrder:
+        type: string
+      startDate:
+        type: string
+    type: object
 info:
   contact:
     email: joshua_chen@qq.com
@@ -13,13 +35,79 @@ info:
   version: "1.0"
 paths:
   /products:
-    get:
-      consumes:
-      - application/x-json-stream
-      description: 获取产品
+    post:
+      description: 产品列表
+      parameters:
+      - description: body参数
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.Pagination'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok" "返回用户信息
+          schema:
+            type: string
+        "400":
+          description: err_code：10002 参数错误； err_code：10003 校验错误
+          schema:
+            type: string
+        "401":
+          description: err_code：10001 登录失败
+          schema:
+            type: string
+        "500":
+          description: err_code：20001 服务错误；err_code：20002 接口错误；err_code：20003 无数据错误；err_code：20004 数据库异常；err_code：20005 缓存异常
+          schema:
+            type: string
+      summary: 产品列表
   /users:
     get:
-      consumes:
-      - application/x-json-stream
-      description: 获取产品
+      description: 登录
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok" "返回用户信息
+          schema:
+            type: string
+        "400":
+          description: err_code：10002 参数错误； err_code：10003 校验错误
+          schema:
+            type: string
+        "401":
+          description: err_code：10001 登录失败
+          schema:
+            type: string
+        "500":
+          description: err_code：20001 服务错误；err_code：20002 接口错误；err_code：20003 无数据错误；err_code：20004 数据库异常；err_code：20005 缓存异常
+          schema:
+            type: string
+      summary: 获取用户信息
+  /users/registe:
+    post:
+      description: 用户注册
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok" "返回用户信息
+          schema:
+            type: string
+        "400":
+          description: err_code：10002 参数错误； err_code：10003 校验错误
+          schema:
+            type: string
+        "401":
+          description: err_code：10001 登录失败
+          schema:
+            type: string
+        "500":
+          description: err_code：20001 服务错误；err_code：20002 接口错误；err_code：20003 无数据错误；err_code：20004 数据库异常；err_code：20005 缓存异常
+          schema:
+            type: string
+      summary: 用户注册
 swagger: "2.0"
